--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphql-tools/schema": "^8.5.0",
     "@prisma/client": "^4.0.0",
     "apollo-server": "^2.25.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "graphql-tools": "^8.3.0"
   },
@@ -23,6 +24,7 @@
     "@babel/core": "^7.18.9",
     "@babel/node": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "eslint": "^8.20.0",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0"
   }
